[package]
name = "gguf_jinja_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
gguf = { git = "https://github.com/McPatate/gguf", branch = "feat/add_read_header_only" }
indicatif = "0.17"
parse_link_header = { version = "0.3", features = ["url"] }
pyo3 = { version = "0.21", features = ["auto-initialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
